tests/rustdoc-ui/doc-alias-assoc-const.stderr
error: `#[doc(alias = "...")]` isn't allowed on associated constant in trait implementation block
  --> $DIR/doc-alias-assoc-const.rs:8:19
   |
LL |     #[doc(alias = "CONST_BAZ")]
   |                   ^^^^^^^^^^^

error: aborting due to 1 previous error

